<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Explorador de Videojuegos</string>
    <string name="loading">Cargando...</string>
    <string name="error">Ocurrió un error</string>
    <string name="retry">Reintentar</string>
    <string name="accessibility">Accesibilidad</string>
    <string name="game_detail">Detalle del juego</string>
    <string name="filters">Filtros</string>
    <string name="apply_filters">Aplicar filtros</string>
    <string name="clear_filters">Limpiar filtros</string>
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="close">Cerrar</string>
    <string name="back">Atrás</string>
    <string name="next">Siguiente</string>
    <string name="done">Listo</string>
    <string name="save">Guardar</string>
    <string name="no_data">No hay datos disponibles</string>
    <string name="empty_list">Lista vacía</string>
    <string name="error_network">Error de conexión</string>
    <string name="error_generic">Ha ocurrido un error</string>
    <string name="error_loading">Error al cargar datos</string>
    <string name="error_no_internet">Sin conexión a internet</string>
    <string name="error_id_juego_invalido">Error: ID de juego no válido</string>
    <string name="content_description_loading">Indicador de carga</string>
    <string name="content_description_error">Icono de error</string>
    <string name="content_description_retry">Botón reintentar</string>
    <string name="sin_resumen">Sin descripción disponible</string>
    <string name="rating_placeholder">★ %1$s</string>
    <string name="release_date_placeholder">%1$s de %2$s, %3$s</string>
    <string name="loading_data">Cargando datos...</string>
</resources>
