<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding_extra_large">

    <ImageView
        android:id="@+id/ivError"
        android:layout_width="@dimen/error_icon_size"
        android:layout_height="@dimen/error_icon_size"
        android:layout_marginBottom="@dimen/margin_medium"
        android:contentDescription="@string/content_description_error"
        android:src="@drawable/ic_error"
        app:tint="@color/error" />

    <TextView
        android:id="@+id/tvErrorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/error"
        android:textAppearance="@style/TextAppearance.Core.Headline"
        android:textColor="@color/error" />

    <TextView
        android:id="@+id/tvErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_large"
        android:gravity="center"
        android:text="@string/error_generic"
        android:textAppearance="@style/TextAppearance.Core.Body"
        android:textColor="@color/text_secondary" />

    <Button
        android:id="@+id/btnRetry"
        style="@style/Widget.Core.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_description_retry"
        android:text="@string/retry" />

</LinearLayout>
